--- a/Project/LoftParketta/shop/templates/base.html
+++ b/Project/LoftParketta/shop/templates/base.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}LoftParketta{% endblock %}</title>
     {% load static %}
-    <link rel="icon" type="image/x-icon" href="{% static 'image/nav/logo.png' %}">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <script src="{% static 'js/jquery.js' %}"></script>
-    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet"  crossorigin="anonymous">
-    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="{% static 'fontawesome/css/font-awesome.min.css' %}">
-<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="8b3c6f5c-571f-4379-bd48-f54d5fa82a56" data-blockingmode="auto" type="text/javascript"></script>
+    <link async rel="icon" type="image/x-icon" href="{% static 'image/nav/logo.png' %}">
+    <link async rel="stylesheet" media="print" onload="this.media='all';" href="{% static 'css/base.css' %}">
+    <script async src="{% static 'js/jquery.js' %}"></script>
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <script async src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}" crossorigin="anonymous"></script>
+    <link async rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script async id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="8b3c6f5c-571f-4379-bd48-f54d5fa82a56" data-blockingmode="auto" type="text/javascript"></script>
+    <meta name="description" content="Prémium parketták széles választéka Szegeden! Murexin, FLOORPAN, Krono, HARO, EGGER, HDM, ARBITON és Pangolin termékek kedvező áron. Nézd meg kínálatunkat!">
 </head>
 <body>
 
@@ -148,8 +149,8 @@
             <div class="col-6 col-md-2 mb-3">
               <h5>Elérhetőségink</h5>
               <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a class="nav-link p-0 text-white">info@loftparketta.hu</a></li>
-                <li class="nav-item mb-2"><a class="nav-link p-0 text-white">06301111111</a></li>
+                <li class="nav-item mb-2"><a class="nav-link p-0 text-white" href="mailto:info@loftparketta.hu">info@loftparketta.hu</a></li>
+                <li class="nav-item mb-2"><a class="nav-link p-0 text-white" href="tel:+36703910818">+36 70 391 0818</a></li>
                 <li class="nav-item mb-2"><a class="nav-link p-0 text-white">Szeged, Kossuth Lajos sgrt. 49-51, 6724</a></li>
               </ul>
             </div>
@@ -161,7 +162,7 @@
           <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
             <p>© 2022 Company, Inc. All rights reserved.</p>
             <ul class="list-unstyled d-flex">
-              <li class="ms-3"><a class="link-dark" href="#"><svg width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <li class="ms-3"><a class="link-dark" href="mailto:info@loftparketta.hu"><svg width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="68" height="68" fill="url(#pattern0_48_894)"/>
                 <defs>
                 <pattern id="pattern0_48_894" patternContentUnits="objectBoundingBox" width="1" height="1">
@@ -181,7 +182,7 @@
                 </defs>
                 </svg>
                 <use xlink:href="#instagram"></use></svg></a></li>
-              <li class="ms-3"><a class="link-dark" href="#"><svg width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <li class="ms-3"><a class="link-dark" href="https://www.facebook.com/p/Loft-parketta-bemutat%C3%B3terem-100045189956508/?locale=hu_HU"><svg width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="68" height="68" fill="url(#pattern0_48_892)"/>
                 <defs>
                 <pattern id="pattern0_48_892" patternContentUnits="objectBoundingBox" width="1" height="1">
