--- a/Project/LoftParketta/shop/static/css/product_detail.css
+++ b/Project/LoftParketta/shop/static/css/product_detail.css
@@ -1,32 +1,32 @@
 .product-detail-card {
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin-bottom: 40px;
-        }
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 40px;
+}
 
-        .price-final {
-            color: #d9534f;
-            font-size: 1.75rem;
-            font-weight: bold;
-        }
-        .similar-products {
-            margin-top: 40px;
-        }
-        .similar-product-card img {
-            border-radius: 8px;
-            max-height: 180px;
-            object-fit: cover;
-        }
-        .rating i {
-            color: #f8c22e;
-        }
+.price-final {
+    color: #d9534f;
+    font-size: 1.75rem;
+    font-weight: bold;
+}
+.similar-products {
+    margin-top: 40px;
+}
+.similar-product-card img {
+    border-radius: 8px;
+    max-height: 180px;
+    object-fit: cover;
+}
+.rating i {
+    color: #f8c22e;
+}
 
-        .pagination {
-            margin-top: 30px;
-        }
-        .product-image-card {
+.pagination {
+    margin-top: 30px;
+}
+.product-image-card {
     width: 90%;
     height: 100%;
     overflow: hidden;
@@ -34,7 +34,9 @@
     margin: auto;
 }
 
-
+.product-image {
+height: auto !important;
+}
 .product-image-card img {
     width: 100%;
     height: 100%;
@@ -70,4 +72,35 @@ ul{
 .hover06 figure:hover img {
 	-webkit-transform: rotate(0) scale(1);
 	transform: rotate(0) scale(1);
+}
+
+.mySwiper2 {
+    height: 400px;
+    width: 100%;
+  }
+
+.mySwiper {
+height: 100px;
+box-sizing: border-box;
+padding: 10px 0;
+}
+
+.mySwiper .swiper-slide {
+width: 25%;
+height: 100%;
+opacity: 0.4;
+}
+
+.mySwiper, .swiper-slide-thumb-active {
+opacity: 1;
+}
+
+.swiper-slide img {
+width: 100%;
+height: 100%;
+object-fit: contain;
+}
+
+.swiper-button-next, .swiper-button-prev {
+color: black !important;
 }
