--- a/Project/LoftParketta/shopping_cart/templates/cart.html
+++ b/Project/LoftParketta/shopping_cart/templates/cart.html
@@ -93,7 +93,7 @@
           <div class="border-top pt-4 mx-4 mb-4">
             <p><i class="fas fa-truck text-muted fa-lg"></i>Ingyenes szállítás Szegedre, a kézbesítés 1-2 héten belül várható.</p>
             <p class="text-muted">
-              A Szeged területére történő házhozszállítás ingyenes, és a szállítás 1-2 héten belül várható.
+              A Szeged területére történő házhozszállítás ingyenes 100.000 Ft felett, és a szállítás 1-2 héten belül várható.
             </p>
           </div>
         </div>
