--- a/Project/LoftParketta/shopping_cart/templates/payment.html
+++ b/Project/LoftParketta/shopping_cart/templates/payment.html
@@ -33,7 +33,7 @@
     <div class="form-group">
         <label for="shipping_method">Szállítási mód:</label>
         <select name="shipping_method" id="shipping_method" class="form-control" required>
-            <option value="free_shipping">Ingyenes szállítás Szegeden belül</option>
+<!--            <option value="free_shipping">Ingyenes szállítás Szegeden belül</option>-->
             <option value="home_delivery">Házhoz szállítás</option>
             <option value="store_pickup">Boltban történő átvétel</option>
         </select>
